# critical-projects

./: .gitignore  Makefile  README.md  analysis_conf.yml  create_db.sh  pyproject.toml  run_experiment.sh
critical_projects/: __init__.py  compute_pagerank.py  compute_results.py  create_neo4j_indexes.py  create_neo4j_pr_comp.py  deps_to_neo4j_csv.py  generate_pr_reports.py  merge_result_csvs.py  projects_to_neo4j_csv.py  run_experiment.py
data/output/: cargo_top_1000.csv  comparison.adoc  comparison.csv  comparison.html  cpan_top_1000.csv  cran_top_1000.csv  dub_top_1000.csv  elm_top_1000.csv  hex_top_1000.csv  homebrew_top_1000.csv  maven_top_1000.csv  npm_top_1000.csv  nuget_top_1000.csv  packagist_top_1000.csv  pub_top_1000.csv  puppet_top_1000.csv  pypi_top_1000.csv  results_Cargo.csv  results_NPM.csv  results_Packagist.csv  results_Pypi.csv  rubygems_top_1000.csv  tf_and_cs.csv
